--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
+What are the main benefits of open data? Select all that apply.
+
+
+Combines data from different fields of knowledge
+
+
+
+Good data is more widely available
+
+
+
+Restricts data access to certain groups of people
+
+
+
+Increases the amount of data available for purchase
+
+
+1 point
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -73,7 +92,7 @@
     <div class="container mx-auto p-4 sm:p-6 md:p-8">
         <!-- Header -->
         <header class="text-center mb-10">
-            <h1 class="text-4xl md:text-5xl font-extrabold main-title">Panduan & Penghasil Prompt Veo</h1>
+            <h1 class="text-4xl md:text-5xl font-extrabold main-title">Video Prompt Generator VEO3 Powered by Gemini AI</h1>
             <p class="mt-3 text-lg text-slate-600 max-w-2xl mx-auto">Alat bantu cerdas untuk mengubah ide sederhana menjadi prompt video sinematik dengan nuansa Indonesia.</p>
         </header>
 
