--- a/index.html
+++ b/index.html
@@ -1,28 +1,9 @@
-What are the main benefits of open data? Select all that apply.
-
-
-Combines data from different fields of knowledge
-
-
-
-Good data is more widely available
-
-
-
-Restricts data access to certain groups of people
-
-
-
-Increases the amount of data available for purchase
-
-
-1 point
 <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Prompt Generator dengan Gemini AI</title>
+    <title>Video Prompt Generator Veo3 menggunakan Gemini AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -92,7 +73,7 @@ Increases the amount of data available for purchase
     <div class="container mx-auto p-4 sm:p-6 md:p-8">
         <!-- Header -->
         <header class="text-center mb-10">
-            <h1 class="text-4xl md:text-5xl font-extrabold main-title">Video Prompt Generator VEO3 Powered by Gemini AI</h1>
+            <h1 class="text-4xl md:text-5xl font-extrabold main-title">Video Prompt Generator Google Veo3 </h1>
             <p class="mt-3 text-lg text-slate-600 max-w-2xl mx-auto">Alat bantu cerdas untuk mengubah ide sederhana menjadi prompt video sinematik dengan nuansa Indonesia.</p>
         </header>
 
